--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     
     <body>
         <h1>Charlène Hounsou-Guédé </h1>
+        <h2>Welcome to my virtual home</h2>
+        <ul>
+            <li><button type="button">Portfolio</button></li>
+            <li><button type="button">Linkedin</button></li>
+            <li><button type="button">Reading list</button></li>
+            <li><button type="button">Blog</button></li>
+        </ul>
+
+
     </body>
 
 </html>
