Add headings and personal infos. Modify some CSS elements to make it more readable

--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <title>Charlène Hounsou-Guédé - Diaspolistic</title>
+        <title>Charlène Hounsou-Guédé</title>
     </head>
     
     <body>
-        <h1>Charlène Hounsou-Guédé </h1>
-        <h2>Welcome to my virtual home</h2>
+        <h1>Charlène Hounsou-Guédé &#129426; </h1>
+        <h2>Fullstack Developer. Lifelong Learner. Enthusiastic Builder.</h2>
+
+        <h3>Fun facts about me</h3>
+        <ul>
+            <li>I love food</li>
+            <li>I live in France</li>
+            <li>My favorite animals are giraffes</li>
+        </ul>
+
+        <h4>Discover my work, Connect with me</h4>
         <ul>
             <li><button type="button">Portfolio</button></li>
             <li><button type="button">Linkedin</button></li>
             <li><button type="button">Reading list</button></li>
             <li><button type="button">Blog</button></li>
+            <li><input type="email" placeholder="Your email"> <button class="newsletter">Join the newsletter</button></li>
         </ul>
 
 
