Add class to external url buttons to customize color and radius in CSS

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
 
         <h4>Discover my work, Connect with me</h4>
         <ul>
-            <li><button type="button">Portfolio</button></li>
-            <li><button type="button">Linkedin</button></li>
-            <li><button type="button">Reading list</button></li>
-            <li><button type="button">Blog</button></li>
-            <li><input type="email" placeholder="Your email"> <button class="newsletter">Join the newsletter</button></li>
+            <li><button class="workButton" type="button">Portfolio</button></li>
+            <li><button class="workButton" type="button">Linkedin</button></li>
+            <li><button class="workButton" type="button">Reading list</button></li>
+            <li><button class="workButton" type="button">Blog</button></li>
         </ul>
 
+        <p class="joinNL">Want to receive a monthly newsletter about programming and other tidbits ? Join below !</p>
+        <input type="email" placeholder="Your email"> <button class="newsletter">Join the newsletter</button>
+
+        <!-- REMOVE THE BUTTON SHADOW IN CSS  -->
 
     </body>
 
