Improve CSS with color matching, margins, padding

--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
         <h1>Charlène Hounsou-Guédé &#129426; </h1>
         <h2>Fullstack Developer. Lifelong Learner. Enthusiastic Builder.</h2>
 
-        <h3>Fun facts about me</h3>
-        <ul>
-            <li>I love food</li>
-            <li>I live in France</li>
-            <li>My favorite animals are giraffes</li>
-        </ul>
+        <div class="mainContent">
+            <h3>Fun facts about me</h3>
+            <ul>
+                <li>I love food</li>
+                <li>I live in France</li>
+                <li>My favorite animals are giraffes</li>
+            </ul>
 
-        <h4>Discover my work, Connect with me</h4>
-        <ul>
-            <li><button class="workButton" type="button">Portfolio</button></li>
-            <li><button class="workButton" type="button">Linkedin</button></li>
-            <li><button class="workButton" type="button">Reading list</button></li>
-            <li><button class="workButton" type="button">Blog</button></li>
-        </ul>
+            <h4>Discover my work, Connect with me</h4>
+            <ul>
+                <li><button class="connect-button" type="button">PORTFOLIO</button></li>
+                <li><button class="connect-button" type="button">LINKEDIN</button></li>
+                <li><button class="connect-button" type="button">READING LIST</button></li>
+                <li><button class="connect-button" type="button">BLOG</button></li>
+            </ul>
 
-        <p class="joinNL">Want to receive a monthly newsletter about programming and other tidbits ? Join below !</p>
-        <input type="email" placeholder="Your email"> <button class="newsletter">Join the newsletter</button>
-
-        <!-- REMOVE THE BUTTON SHADOW IN CSS  -->
+            <p class="join-newsletter">Want to receive a monthly newsletter about programming and other tidbits ? 
+                <br> Join below !</p>
+            <input class="email-input" type="email" placeholder="Your email"> <button class="newsletter-button">JOIN THE NEWSLETTER</button>
+        </div>
 
     </body>
 
