--- a/index.html
+++ b/index.html
@@ -8,24 +8,36 @@
     </head>
     
     <body>
-        <h1>Charlène Hounsou-Guédé &#129426; </h1>
+        <h1>Charlène Hounsou-Guédé</h1>
         <h2>Fullstack Developer. Lifelong Learner. Enthusiastic Builder.</h2>
 
         <div class="mainContent">
-            <h3>Fun facts about me</h3>
-            <ul>
-                <li>I love food</li>
-                <li>I live in France</li>
-                <li>My favorite animals are giraffes</li>
-            </ul>
+            <div class="fun-facts">
+                <h3>Fun facts about me</h3>
+                <ul class="fun-facts-list">
+                    <li>I love food</li>
+                    <li>I live in France</li>
+                    <li>My favorite animals are giraffes</li>
+                </ul>
+            </div>
 
-            <h4>Discover my work, Connect with me</h4>
-            <ul>
-                <li><button class="connect-button" type="button">PORTFOLIO</button></li>
-                <li><button class="connect-button" type="button">LINKEDIN</button></li>
-                <li><button class="connect-button" type="button">READING LIST</button></li>
-                <li><button class="connect-button" type="button">BLOG</button></li>
-            </ul>
+            <div class="discover-work">
+                <h4>Discover my work, Connect with me</h4>
+                <ul class="discover-work-list">
+                    <li>
+                        <button class="connect-button" type="button">PORTFOLIO</button>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/charlene-hounsou-guede" target="_blank">
+                        <button class="connect-button" type="submit">LINKEDIN</button>
+                        </a>
+                    </li>
+                    <li>
+                        <button class="connect-button" type="button">READING LIST</button>
+                    </li>
+                    <li><button class="connect-button" type="button">BLOG</button></li>
+                </ul>
+            </div>
 
             <p class="join-newsletter">Want to receive a monthly newsletter about programming and other tidbits ? 
                 <br> Join below !</p>
