Improve CSS with text-shadow, background image, etc

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <html lang ="fr">
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>Charlène Hounsou-Guédé</title>
     </head>
     
     <body>
-        <h1>Charlène Hounsou-Guédé</h1>
-        <h2>Fullstack Developer. Lifelong Learner. Enthusiastic Builder.</h2>
+        <h1>CHARLÈNE HOUNSOU-GUÉDÉ</h1>
+        <h2>Fullstack Developer. Lifelong Learner. Enthusiastic Dreamer.</h2>
 
         <div class="mainContent">
             <div class="fun-facts">
@@ -22,7 +25,7 @@
             </div>
 
             <div class="discover-work">
-                <h4>Discover my work, Connect with me</h4>
+                <h4>Discover my work - Connect with me</h4>
                 <ul class="discover-work-list">
                     <li>
                         <button class="connect-button" type="button">PORTFOLIO</button>
